# Otus_sorts

./: .gitignore  CMakeLists.txt
headers/: Sorter.h  Test.h
src/: generator.cpp  main.cpp
